# quantum-ml

./: .gitignore  README.md  drybean-qnn.ipynb  feature-map.ipynb  hello_quantum.ipynb  iris-qnn.ipynb  main.py  multiclass-iris.ipynb  pyproject.toml
