[project]
name = "quantum-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pylatexenc>=2.10",
    "qiskit>=2.2.3",
    "qiskit-aer>=0.17.2",
    "qiskit-machine-learning>=0.9.0",
]
